force-app/main/default/objects/Case/fields/Added_to_PI_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Added_to_PI_Protocol__c</fullName>
    <label>Added to PI Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Pending</valueSetName>
    </valueSet>
</CustomField>