force-app/main/default/objects/Case/fields/Addition_to_VG_IACUC__c.field-meta.xml
<CustomField>
    <fullName>Addition_to_VG_IACUC__c</fullName>
    <label>Addition to VG IACUC</label>
    <type>Date</type>
</CustomField>