force-app/main/default/objects/Case/fields/Additional_Details_for_CAX__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details_for_CAX__c</fullName>
    <label>Additional Details for Cancelation</label>
    <type>TextArea</type>
</CustomField>