force-app/main/default/objects/Case/fields/Additional_Licensing_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Additional_Licensing_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Licensing Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Additional Licensing Vendor)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>