force-app/main/default/objects/Case/fields/Additional_TFA_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_TFA_Notes__c</fullName>
    <label>Additional TFA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>