force-app/main/default/objects/Case/fields/Background_Strain__c.field-meta.xml
<CustomField>
    <fullName>Background_Strain__c</fullName>
    <label>Background Strain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B6</fullName>
            </value>
            <value>
                <fullName>FVB</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>