force-app/main/default/objects/Case/fields/Biopsy_Sample__c.field-meta.xml
<CustomField>
    <fullName>Biopsy_Sample__c</fullName>
    <inlineHelpText>from CRO/Institution to validate genotyping assays</inlineHelpText>
    <label>Biopsy Sample</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Pending</valueSetName>
    </valueSet>
</CustomField>