force-app/main/default/objects/Case/fields/Breeding_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Breeding_Considerations__c</fullName>
    <label>Breeding Considerations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>