force-app/main/default/objects/Case/fields/Canceled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Reason__c</fullName>
    <label>Canceled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplier Challenges</fullName>
            </value>
            <value>
                <fullName>Contracting Challenges</fullName>
            </value>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>