force-app/main/default/objects/Case/fields/Cohort_Req__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Req__c</fullName>
    <inlineHelpText>If Intended to Breed</inlineHelpText>
    <label>Cohort Req #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>