force-app/main/default/objects/Case/fields/Common_Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Common_Material_Name__c</fullName>
    <label>Common Material Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>