force-app/main/default/objects/Case/fields/Contract_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Requirement__c</fullName>
    <label>Contract Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>General Terms and Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>