force-app/main/default/objects/Case/fields/CRO_Institution_Contacted__c.field-meta.xml
<CustomField>
    <fullName>CRO_Institution_Contacted__c</fullName>
    <label>CRO/Institution Contacted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Pending</valueSetName>
    </valueSet>
</CustomField>