force-app/main/default/objects/Case/fields/Date_IACUC_Justification_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_IACUC_Justification_Form_Received__c</fullName>
    <label>Date IACUC Justification Form Received</label>
    <type>Date</type>
</CustomField>