force-app/main/default/objects/Case/fields/Date_iCertis_Entry_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_iCertis_Entry_Submitted__c</fullName>
    <label>Date iCertis Entry Submitted</label>
    <type>Date</type>
</CustomField>