force-app/main/default/objects/Case/fields/Date_Initial_Payment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Initial_Payment_Complete__c</fullName>
    <label>Date Initial Payment Complete</label>
    <type>Date</type>
</CustomField>