force-app/main/default/objects/Case/fields/Date_of_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Inquiry__c</fullName>
    <description>Actual date when request came in, not when it was created</description>
    <label>Date of Inquiry</label>
    <type>Date</type>
</CustomField>