force-app/main/default/objects/Case/fields/Date_PO_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Date_PO_Obtained__c</fullName>
    <label>Date PO Obtained</label>
    <type>Date</type>
</CustomField>