force-app/main/default/objects/Case/fields/Date_SL_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_SL_Approved__c</fullName>
    <label>Date SL Approved</label>
    <type>Date</type>
</CustomField>