force-app/main/default/objects/Case/fields/Date_Vendor_Onboarding_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Vendor_Onboarding_Completed__c</fullName>
    <label>Date Vendor Onboarded</label>
    <type>Date</type>
</CustomField>