force-app/main/default/objects/Case/fields/Date_Vendor_Onboarding_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Date_Vendor_Onboarding_Initiated__c</fullName>
    <label>Date Vendor Onboarding Initiated</label>
    <type>Date</type>
</CustomField>