force-app/main/default/objects/Case/fields/Days_for_Vendor_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Days_for_Vendor_Onboarding__c</fullName>
    <formula>Date_Vendor_Onboarding_Completed__c  - Date_Vendor_Onboarding_Initiated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days for Vendor Onboarding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>