force-app/main/default/objects/Case/fields/Days_From_Inquiry_to_Closed__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Inquiry_to_Closed__c</fullName>
    <formula>DateValue(ClosedDate) - Date_of_Inquiry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Inquiry to Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>