force-app/main/default/objects/Case/fields/Days_From_Start_to_End__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Start_to_End__c</fullName>
    <label>Days From Start to End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>