force-app/main/default/objects/Case/fields/Days_in_New__c.field-meta.xml
<CustomField>
    <fullName>Days_in_New__c</fullName>
    <label>Days in New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>