force-app/main/default/objects/Case/fields/Days_In_Process__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Process__c</fullName>
    <label>Days In Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>