force-app/main/default/objects/Case/fields/Days_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Hold__c</fullName>
    <label>Days On Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>