force-app/main/default/objects/Case/fields/Days_to_Material_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Material_Acquisition__c</fullName>
    <formula>Material_Acquisition_Date__c - Date_iCertis_Entry_Submitted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Material Acquisition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>