force-app/main/default/objects/Case/fields/Description_notes_from_ES_team__c.field-meta.xml
<CustomField>
    <fullName>Description_notes_from_ES_team__c</fullName>
    <label>MAID Assigned</label>
    <type>TextArea</type>
</CustomField>