force-app/main/default/objects/Case/fields/Estimated_Date_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_of_Delivery__c</fullName>
    <label>Estimated Date of Delivery</label>
    <type>Date</type>
</CustomField>