force-app/main/default/objects/Case/fields/FileMaker__c.field-meta.xml
<CustomField>
    <fullName>FileMaker__c</fullName>
    <label>FileMaker #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>