force-app/main/default/objects/Case/fields/Founder_Animals_Generated_by_AP_Ops__c.field-meta.xml
<CustomField>
    <fullName>Founder_Animals_Generated_by_AP_Ops__c</fullName>
    <inlineHelpText>NoRMA Record</inlineHelpText>
    <label>Founder Animals Generated by AP Ops</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Pending</valueSetName>
    </valueSet>
</CustomField>