force-app/main/default/objects/Case/fields/Frozen_Product__c.field-meta.xml
<CustomField>
    <fullName>Frozen_Product__c</fullName>
    <label>Frozen Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Embryo</fullName>
            </value>
            <value>
                <fullName>Sperm</fullName>
            </value>
            <value>
                <fullName>ES Cells</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>