force-app/main/default/objects/Case/fields/Generation_of_Frozen_Product__c.field-meta.xml
<CustomField>
    <fullName>Generation_of_Frozen_Product__c</fullName>
    <label>Generation of Frozen Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>