force-app/main/default/objects/Case/fields/IACUC_Days_from_Added_to_Approved__c.field-meta.xml
<CustomField>
    <fullName>IACUC_Days_from_Added_to_Approved__c</fullName>
    <formula>VG_IACUC_Approved__c - Addition_to_VG_IACUC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IACUC Days from Added to Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>