force-app/main/default/objects/Case/fields/IACUC_Days_from_Received_to_Approved__c.field-meta.xml
<CustomField>
    <fullName>IACUC_Days_from_Received_to_Approved__c</fullName>
    <formula>VG_IACUC_Approved__c -  Date_IACUC_Justification_Form_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IACUC Days from Received to Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>