force-app/main/default/objects/Case/fields/IACUC_Days_Received_to_Added__c.field-meta.xml
<CustomField>
    <fullName>IACUC_Days_Received_to_Added__c</fullName>
    <formula>Addition_to_VG_IACUC__c -  Date_IACUC_Justification_Form_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IACUC Days Received to Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>