force-app/main/default/objects/Case/fields/Is_Animal_Model__c.field-meta.xml
<CustomField>
    <fullName>Is_Animal_Model__c</fullName>
    <label>Is Animal Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>