force-app/main/default/objects/Case/fields/Is_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Is_Collaboration__c</fullName>
    <label>Associated with Collaboration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>