force-app/main/default/objects/Case/fields/Is_there_another_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Is_there_another_Vendor__c</fullName>
    <label>Is there another licensing Vendor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>