force-app/main/default/objects/Case/fields/Justification_Research_Plan__c.field-meta.xml
<CustomField>
    <fullName>Justification_Research_Plan__c</fullName>
    <label>Justification/Research Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>