force-app/main/default/objects/Case/fields/Karyotype__c.field-meta.xml
<CustomField>
    <fullName>Karyotype__c</fullName>
    <label>FileMaker Production Request #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>