force-app/main/default/objects/Case/fields/Licensing_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licensing Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>