force-app/main/default/objects/Case/fields/MAID_category__c.field-meta.xml
<CustomField>
    <fullName>MAID_category__c</fullName>
    <label>MAID category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>