force-app/main/default/objects/Case/fields/MAID_page_description__c.field-meta.xml
<CustomField>
    <fullName>MAID_page_description__c</fullName>
    <label>MAID page description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>