force-app/main/default/objects/Case/fields/MAID_page_Gene_Association__c.field-meta.xml
<CustomField>
    <fullName>MAID_page_Gene_Association__c</fullName>
    <label>MAID page Gene Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>