force-app/main/default/objects/Case/fields/MAID_S__c.field-meta.xml
<CustomField>
    <fullName>MAID_S__c</fullName>
    <label>MAID/S #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>