force-app/main/default/objects/Case/fields/Material_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Material_Acquisition_Date__c</fullName>
    <label>Material Acquisition</label>
    <type>Date</type>
</CustomField>