force-app/main/default/objects/Case/fields/Materials_Received__c.field-meta.xml
<CustomField>
    <fullName>Materials_Received__c</fullName>
    <label>Materials Received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Request Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>