force-app/main/default/objects/Case/fields/Materials_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Materials_Vendor__c</fullName>
    <label>Materials Vendor Web Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>