force-app/main/default/objects/Case/fields/Materials_Vendor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Materials_Vendor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account lookup because we can&apos;t change Account Name label on the cases</description>
    <label>Materials Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Materials Vendor)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>