force-app/main/default/objects/Case/fields/Model_References__c.field-meta.xml
<CustomField>
    <fullName>Model_References__c</fullName>
    <label>Model References</label>
    <type>TextArea</type>
</CustomField>