force-app/main/default/objects/Case/fields/No_Date_Addition_to_IACUC__c.field-meta.xml
<CustomField>
    <fullName>No_Date_Addition_to_IACUC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in request tracker flow to display a message</description>
    <label>No Date Addition to IACUC</label>
    <type>Checkbox</type>
</CustomField>