force-app/main/default/objects/Case/fields/No_Date_IACUC_Justification_Received__c.field-meta.xml
<CustomField>
    <fullName>No_Date_IACUC_Justification_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Date IACUC Justification Received</label>
    <type>Checkbox</type>
</CustomField>