force-app/main/default/objects/Case/fields/No_Date_iCertis__c.field-meta.xml
<CustomField>
    <fullName>No_Date_iCertis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in request tracker flow to display a message</description>
    <label>No Date iCertis</label>
    <type>Checkbox</type>
</CustomField>