force-app/main/default/objects/Case/fields/No_Date_Initial_Payment__c.field-meta.xml
<CustomField>
    <fullName>No_Date_Initial_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in request tracker flow to display a message</description>
    <label>No Date Initial Payment</label>
    <type>Checkbox</type>
</CustomField>