force-app/main/default/objects/Case/fields/No_Date_Vendor_Onboarding_Initiated__c.field-meta.xml
<CustomField>
    <fullName>No_Date_Vendor_Onboarding_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Date Vendor Onboarding Initiated</label>
    <type>Checkbox</type>
</CustomField>