force-app/main/default/objects/Case/fields/NoRMA__c.field-meta.xml
<CustomField>
    <fullName>NoRMA__c</fullName>
    <label>NoRMA #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>