force-app/main/default/objects/Case/fields/Number_of_animals_justification__c.field-meta.xml
<CustomField>
    <fullName>Number_of_animals_justification__c</fullName>
    <label>Number of animals justification</label>
    <type>TextArea</type>
</CustomField>