force-app/main/default/objects/Case/fields/Number_of_Animals_per_year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Animals_per_year__c</fullName>
    <label>Number of Animals per year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>