force-app/main/default/objects/Case/fields/Other_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Request_Type__c</fullName>
    <label>Other Request Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>