force-app/main/default/objects/Case/fields/Other_Strain__c.field-meta.xml
<CustomField>
    <fullName>Other_Strain__c</fullName>
    <label>Other Strain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>