force-app/main/default/objects/Case/fields/Phenotype_Behavior_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Behavior_Considerations__c</fullName>
    <label>Phenotype Behavior Considerations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>