force-app/main/default/objects/Case/fields/PR_Request__c.field-meta.xml
<CustomField>
    <fullName>PR_Request__c</fullName>
    <label>PR Request #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>