force-app/main/default/objects/Case/fields/Product_Available_from_CRO_Institution__c.field-meta.xml
<CustomField>
    <fullName>Product_Available_from_CRO_Institution__c</fullName>
    <label>Product Available from CRO/Institution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live Animals</fullName>
            </value>
            <value>
                <fullName>Embryos</fullName>
            </value>
            <value>
                <fullName>Cells</fullName>
            </value>
            <value>
                <fullName>Sperm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>