force-app/main/default/objects/Case/fields/Quote_PO__c.field-meta.xml
<CustomField>
    <fullName>Quote_PO__c</fullName>
    <inlineHelpText>If bred in VG</inlineHelpText>
    <label>Quote/PO #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>