force-app/main/default/objects/Case/fields/Requested_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Requested_Item_Name__c</fullName>
    <label>Requested Item Name</label>
    <type>TextArea</type>
</CustomField>