force-app/main/default/objects/Case/fields/Requester_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_First_Name__c</fullName>
    <label>Requester First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>