force-app/main/default/objects/Case/fields/Special_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Special_Considerations__c</fullName>
    <label>Special Considerations</label>
    <type>TextArea</type>
</CustomField>