force-app/main/default/objects/Case/fields/Special_Feed__c.field-meta.xml
<CustomField>
    <fullName>Special_Feed__c</fullName>
    <label>Special Feed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>