force-app/main/default/objects/Case/fields/Status_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_End_Date__c</fullName>
    <label>Status End Date</label>
    <type>Date</type>
</CustomField>