force-app/main/default/objects/Case/fields/Status_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Start_Date__c</fullName>
    <label>Status Start Date</label>
    <type>Date</type>
</CustomField>