force-app/main/default/objects/Case/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <label>Stock #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>