force-app/main/default/objects/Case/fields/Time_to_Add_to_VG_IACUC__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Add_to_VG_IACUC__c</fullName>
    <formula>Addition_to_VG_IACUC__c - Date_of_Inquiry__c</formula>
    <label>Time to Add to VG IACUC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>