force-app/main/default/objects/Case/fields/Time_to_iCertis_Entry_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Time_to_iCertis_Entry_Submitted__c</fullName>
    <formula>Date_iCertis_Entry_Submitted__c - Date_of_Inquiry__c</formula>
    <inlineHelpText>in Days</inlineHelpText>
    <label>Time to iCertis Entry Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>