force-app/main/default/objects/Case/fields/Time_to_Initial_Payment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Initial_Payment_Complete__c</fullName>
    <formula>Date_Initial_Payment_Complete__c  -  Date_of_Inquiry__c</formula>
    <label>Time to Initial Payment Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>