force-app/main/default/objects/Case/fields/Time_to_Material_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Material_Acquisition__c</fullName>
    <formula>Material_Acquisition_Date__c - Date_of_Inquiry__c</formula>
    <label>Time to Material Acquisition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>